basic layout and design added

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,3 +1,8 @@
-<section class="w-96 h-[700px] bg-white m-auto mt-20 flex rounded-md shadow-xl">
-    app section
+<section class="w-96 h-[700px] bg-white m-auto mt-20 rounded-md shadow-xl">
+    <section class="search-container w-full">
+        <app-search-box />
+    </section>
+    <section class="weather-details-container mt-10">
+        <app-weather-box />
+    </section>
 </section>
