--- a/src/styles.css
+++ b/src/styles.css
@@ -17,9 +17,9 @@ body {
 }
 
 .day-bg {
-    /* background-image: url(./assets/images/day.webp); */
+    /* background-image: url(./assets/images/day.jpg); */
 }
 
 .night-bg {
-    /* background-image: url('./assets/images/night.webp'); */
+    /* background-image: url('./assets/images/night.jpg'); */
 }
