--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="w-96 h-[700px] bg-white m-auto mt-20 rounded-md shadow-xl">
+<section class="w-96 h-[700px] bg-slate-100 m-auto mt-20 rounded-md shadow-xl">
     <section class="search-container w-full">
         <app-search-box (weatherData)="setWeatherData($event)" />
     </section>
